/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * DTP/2 is developing, so this file is not stable.
 */

// This file contains protocol buffers that are used to transfer data
// to and from the datanode, as well as between datanodes.

option java_package = "org.apache.hadoop.hdfs.protocol.proto";
option java_outer_classname = "DataTransferV2Protos";
option java_generate_equals_and_hash = true;
package hadoop.hdfs;

import "datatransfer.proto";

message OpReadBlockRequestProto {
  required ClientOperationHeaderProto header = 1;
  required uint64 offset = 2;
  required uint64 len = 3;
  required bool sendChecksums = 4;
  optional CachingStrategyProto cachingStrategy = 5;
}

message OpReadBlockResponseProto {
  required Status status = 1;
  optional ReadOpChecksumInfoProto readOpChecksumInfo = 2;
  optional string message = 3;
}

message OpReadBlockFrameHeaderProto {
  required uint32 numChunks = 1;
  required bytes checksums = 2;
  required uint32 dataLength = 3;
}